# duckdb

./: CMakeLists.txt  Makefile
extension/: CMakeLists.txt
extension/httpfs/: httpfs.cpp
extension/motherduck/: CMakeLists.txt  motherduck-extension.cpp  motherduck.cpp  s3fs.cpp
extension/motherduck/include/: motherduck-extension.hpp  s3fs.hpp
src/catalog/: catalog_set.cpp  duck_catalog.cpp
src/common/: enum_util.cpp
src/include/duckdb/catalog/: catalog.hpp
src/include/duckdb/common/: enum_util.hpp
src/include/duckdb/main/: config.hpp  database.hpp  extension_helper.hpp
src/main/: database.cpp
src/main/extension/: extension_helper.cpp
src/storage/: data_table.cpp  storage_manager.cpp
src/transaction/: commit_state.cpp
test/api/: test_api.cpp
tools/pythonpkg/tests/fast/: test_motherduck_conn.py
